--- a/packages/flutter_image_compress_common/android/build.gradle
+++ b/packages/flutter_image_compress_common/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
@@ -40,5 +40,5 @@ android {
 dependencies {
     implementation 'androidx.exifinterface:exifinterface:1.3.6'
     implementation 'androidx.heifwriter:heifwriter:1.0.0'
-    implementation 'commons-io:commons-io:2.6'
+    implementation 'commons-io:commons-io:20030203.000550'
 }
