--- a/packages/flutter_image_compress/pubspec.yaml
+++ b/packages/flutter_image_compress/pubspec.yaml
@@ -4,15 +4,28 @@ repository: https://github.com/fluttercandies/flutter_image_compress
 version: 2.0.4
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
-  flutter: '>=2.0.0'
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.10.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_image_compress_platform_interface: ^1.0.2
-  flutter_image_compress_common: ^1.0.2
-  flutter_image_compress_web: ^0.1.3+1
+ 
+  flutter_image_compress_platform_interface: 
+    git: 
+      url: git@github.com:tatlacas/flutter_image_compress.git
+      path: packages/flutter_image_compress_platform_interface
+      ref: tat-dev
+  flutter_image_compress_common: 
+    git: 
+      url: git@github.com:tatlacas/flutter_image_compress.git
+      path: packages/flutter_image_compress_common
+      ref: tat-dev
+  flutter_image_compress_web: 
+    git: 
+      url: git@github.com:tatlacas/flutter_image_compress.git
+      path: packages/flutter_image_compress
+      ref: tat-dev
 
 flutter:
   plugin:
